--- a/updation/v4.4tov6.0.md
+++ b/updation/v4.4tov6.0.md
@@ -4,6 +4,8 @@ title: MongoDB6.0へのアップグレート
 ---
 
 「v4.4 から v5.0」から「v5.0 から v6.0」という風に、順に一つずつ操作する必要があります。
+また、MongoDBの5.0系列以降ではAVXという拡張命令セットが有効になっている必要があります。<br>
+参考:https://www.mongodb.com/docs/manual/administration/production-notes/#platform-support-notes
 
 ### v4.4 から v5.0 へのアップグレード
 
